--- a/gb/src/index.html
+++ b/gb/src/index.html
@@ -6,10 +6,11 @@
       href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css"
       rel="stylesheet"
     />
+    <script src="/switcher.js"></script>
     <title>GB - Welcome</title>
   </head>
   <body>
-    <h1 class="text-center text-2xl font-bold text-gray-500 pt-10">
+    <h1 class="text-center text-2xl font-bold text-gray-700 pt-10">
       GB - Welcome
     </h1>
   </body>
