--- a/gb/src/index.html
+++ b/gb/src/index.html
@@ -6,7 +6,7 @@
       href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css"
       rel="stylesheet"
     />
-    <script src="/switcher.js"></script>
+    <script src="/js/switcher.js"></script>
     <title>GB - Welcome</title>
   </head>
   <body>
