fix: use switcher on master site; set path on cookie to root

--- a/master/src/index.html
+++ b/master/src/index.html
@@ -6,14 +6,10 @@
       href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css"
       rel="stylesheet"
     />
+    <script src="/js/switcher.js"></script>
     <title>Master</title>
   </head>
   <body class="text-gray-500">
     <h1 class="text-center text-2xl font-bold pt-10">Master</h1>
-    <ul>
-      <li class="text-center"><a href="/gb/">GB Site</a></li>
-      <li class="text-center"><a href="/de/">DE Site</a></li>
-      <li class="text-center"><a href="/ie/">IE Site</a></li>
-    </ul>
   </body>
 </html>
